2005-09-21  Michael Natterer  <mitch@gimp.org>

	Separated the global buffer logic from the clipboard
	implementation:

	* app/widgets/gimpclipboard.[ch]: removed all knowledge about
	gimp->global_buffer. Removed the Gimp::buffer-changed callback.
	Made gimp_clipboard_set_buffer() public and remember the set
	buffer in the GimpClipboard struct. Fixed the has_buffer() and
	has_svg() functions.

	* app/gui/gui.c: connect to Gimp::buffer-changed here and call
	gimp_clipboard_set_buffer() from the callback.

2005-09-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagefile.c: use ngettext for plural forms.

2005-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/cubism.c: initialize variables.

	* plug-ins/common/depthmerge.c: declare all functions as static.

2005-09-20  DindinX  <dindinx@gimp.org>

	* libgimp/gimpzoompreview.[ch]: make use of private data instead
	of struct members. Added a gimp_zoom_preview_get_drawable so we
	can still get the drawable from a preview in plug-ins.

	Also changed gimp_zoom_preview_get_data() to
	gimp_zoom_preview_get_source(), to make it more obvious what it
	returns.

	* libgimp/gimpui.def
	* plug-ins/common/AlienMap2.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/blinds.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/colorify.c
	* plug-ins/common/flarefx.c
	* plug-ins/common/illusion.c
	* plug-ins/common/jigsaw.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/nova.c
	* plug-ins/common/polar.c
	* plug-ins/common/retinex.c
	* plug-ins/common/waves.c
	* plug-ins/common/whirlpinch.c: changed accordingly.

2005-09-20  DindinX  <dindinx@gimp.org>

	* libgimpwidgets/gimpzoommodel.[ch]: use private data instead of
	struct members. Added min-factor and max-factor properties so we can
	set the zoom range. These can be set by a new utility function:
	gimp_zoom_model_set_range.

	* libgimpwidgets/gimpwidgets.def: added gimp_zoom_model_set_range.
